docs/book/samples/appc/quote_check.out
error[syntax]: unexpected character `'`
  --> quote_check.kso:1:14
   1 | main = print 'hi'
                    ^
